syntax = "proto3";
package products;
option java_multiple_files=true;
option java_package="com.okbasalman.grpc";
option java_outer_classname="ProductsProto";


service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc GetProductById (GetProductByIdRequest) returns (ProductResponse);
    rpc GetAllProducts (Empty) returns (ProductListResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}




message CreateProductRequest {
    string name = 1;
    double price = 2;
    int32 stock = 3;
}


message GetProductByIdRequest {
    int32 id = 1;
}


message UpdateProductRequest {
    int32 id = 1;
    string name = 2;
    double price = 3;
    int32 stock = 4;
}


message DeleteProductRequest {
    int32 id = 1;
}



message ProductResponse {
    int32 id = 1;
    string name = 2;
    double price = 3;
    int32 stock = 4;
}

message ProductListResponse {
    repeated ProductResponse products = 1;
}

message DeleteProductResponse {
    bool success = 1;
    string message = 2;
}

message Empty {}
